[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="Sprite"]
current = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
pause_mode = 2
use_threads = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label_x" type="Label" parent="CanvasLayer"]
margin_top = 12.0
margin_right = 136.0
margin_bottom = 26.0
text = "X="

[node name="Label_y" type="Label" parent="CanvasLayer"]
margin_top = 25.0
margin_right = 40.0
margin_bottom = 39.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Y = "

[node name="Label_z" type="Label" parent="CanvasLayer"]
margin_top = 39.0
margin_right = 40.0
margin_bottom = 53.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Z ="

[node name="Label_r" type="Label" parent="CanvasLayer"]
anchor_bottom = 0.125
margin_top = 52.0
margin_right = 42.0
margin_bottom = 51.8
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "R ="

[node name="Label_id" type="Label" parent="CanvasLayer"]
margin_right = 10.44
margin_bottom = 4.6
text = "ID= "

[node name="Labelx1" type="Label" parent="."]
margin_left = 100.0
margin_right = 140.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "100"

[node name="Labelx2" type="Label" parent="."]
margin_left = 200.0
margin_right = 240.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "200"

[node name="Labelx3" type="Label" parent="."]
margin_left = 300.0
margin_right = 340.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "300"

[node name="Labelx4" type="Label" parent="."]
margin_left = 400.0
margin_right = 440.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "400"

[node name="Labelx5" type="Label" parent="."]
margin_left = 500.0
margin_right = 540.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "500"

[node name="Labely1" type="Label" parent="."]
margin_top = -100.0
margin_right = 40.0
margin_bottom = -86.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "100"

[node name="Labely2" type="Label" parent="."]
margin_top = -200.0
margin_right = 40.0
margin_bottom = -186.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "200"

[node name="Labely3" type="Label" parent="."]
margin_top = -300.0
margin_right = 40.0
margin_bottom = -286.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "300"

[node name="Labely4" type="Label" parent="."]
margin_top = -400.0
margin_right = 40.0
margin_bottom = -386.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "400"

[node name="Labely5" type="Label" parent="."]
margin_top = -500.0
margin_right = 40.0
margin_bottom = -486.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "500"

[node name="Labelx10" type="Label" parent="."]
margin_left = -500.0
margin_right = -460.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-500"

[node name="Labelx6" type="Label" parent="."]
margin_left = -100.0
margin_right = -60.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-100"

[node name="Labelx7" type="Label" parent="."]
margin_left = -200.0
margin_right = -160.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-200"

[node name="Labelx8" type="Label" parent="."]
margin_left = -300.0
margin_right = -260.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-300"

[node name="Labelx9" type="Label" parent="."]
margin_left = -400.0
margin_right = -360.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-400"

[node name="Labely6" type="Label" parent="."]
margin_top = 100.0
margin_right = 40.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-100"

[node name="Labely7" type="Label" parent="."]
margin_top = 200.0
margin_right = 40.0
margin_bottom = 214.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-200"

[node name="Labely8" type="Label" parent="."]
margin_top = 300.0
margin_right = 40.0
margin_bottom = 314.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-300"

[node name="Labely9" type="Label" parent="."]
margin_top = 400.0
margin_right = 40.0
margin_bottom = 414.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-400"

[node name="Labely10" type="Label" parent="."]
margin_top = 500.0
margin_right = 40.0
margin_bottom = 514.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "-500"

[node name="LabelOrigem" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( -770, -7 )
custom_colors/font_color = Color( 0.65098, 0.647059, 0.988235, 1 )
text = "0"

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( -9.53674e-07, 0 )
scale = Vector2( 90.4844, 70.5 )
texture = ExtResource( 2 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
